add angular/router && wrap mediaSource

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>NgRun</title>
+  <title>Made By Towne</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +11,6 @@
 
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <my-app>Loading...</my-app>
 </body>
 </html>
